# wwucs-bot

./: .flake8  CONTRIBUTING.rst  README.rst  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst
src/wwucs/bot/: __init__.py
tests/: test___init__.py
