[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "wwucs-bot"
version = "0.1.0"
description = ""
authors = ["Reilly Tucker Siemens <reilly@tuckersiemens.com>"]
license = "ISC"
packages = [
    { include = "wwucs",  from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
tox = "^3.14.3"
tox-gh-actions = "^0.3.0"

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.14.0
envlist = 
    py38
    static
    docs

[testenv]
whitelist_externals = poetry
skip_install = true
deps =
    pytest ~=  5.3.0
    pytest-cov ~= 2.8.0
    pytest-randomly ~= 3.2.0
# XXX: (2020-02-09) This will install tox again, but it only happens once.
commands_pre = poetry install
commands =
    pytest \
        --verbose \
        --cov=wwucs \
        --cov-report=term-missing \
        --cov-fail-under=100 \
        {posargs}

[testenv:static]
basepython = python3.8
deps =
    bandit ~= 1.6.0
    black ~= 19.10b0
    flake8 ~= 3.7.0
    flake8-bugbear ~= 20.1.0
    flake8-commas ~= 2.0.0
    flake8-docstrings ~= 1.5.0
    pep8-naming ~= 0.9.0
    mypy ~= 0.760
commands_pre = 
commands =
    black --check src
    flake8 --docstring-convention=google src
    mypy \
        --namespace-packages \
        --disallow-untyped-calls \
        --disallow-untyped-defs \
        --disallow-incomplete-defs \
        --disallow-untyped-decorators \
        src/wwucs
    bandit --recursive -ll src

[testenv:docs]
basepython = python3.8
deps =
    sphinx ~= 2.3.0
    sphinx-autodoc-typehints ~= 1.10.0
commands_pre =
commands =
    sphinx-build -b html docs {posargs:docs/_build/html}

[gh-actions]
python =
    3.8: py38, static, docs
"""
